welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur()) {x=true} else {x=false}
                                            ^SnakeBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur()) {x=true} else {x=false}
                                                          ^SnakeBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
	} else {x=false}
                 ^